--- a/css/login.css
+++ b/css/login.css
@@ -263,17 +263,7 @@ body {
     z-index: 1000;
 }
 
-#login-theme-toggle {
+#theme-toggle.theme-btn {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    border: 1px solid var(--border-color);
-    background-color: var(--card-bg-color);
-    color: var(--text-color);
-    font-size: 1.5rem;
-    cursor: pointer;
-    display: grid;
-    place-items: center;
-    padding: 0;
-    line-height: 1;
 }
