--- a/css/global.css
+++ b/css/global.css
@@ -494,15 +494,20 @@ html.dark-mode .theme-btn {
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
+    line-height: 1.1;
 }
 
 .button-with-icon .icon {
     flex-shrink: 0;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button-label {
     display: inline-flex;
     align-items: center;
+    line-height: 1.2;
 }
 
 .icon-theme-dark {
